site contrast corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,8 +364,9 @@ ul.level-1>li.ms-5 {
 }
 
 #top {
-  background-color: #99c4e2;
+  background-color: #cff4fc;
   padding-bottom: 5rem;
+  color: #055160;
 }
 
 .olt-5 {
